# dcm-zed-extension

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  extension.toml  extension.wasm
src/: commands.rs  config.rs  language_server.rs  lib.rs  utils.rs
